--- a/Deep_learning_model.ipynb
+++ b/Deep_learning_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,107 +167,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 [0/12096 (0%)]\tLoss: 29.591167\n",
-      "Train Epoch: 1 [6400/12096 (53%)]\tLoss: 2.063067\n",
+      "Train Epoch: 1 [0/12096 (0%)]\tLoss: 46.745449\n",
+      "Train Epoch: 1 [6400/12096 (53%)]\tLoss: 1.854531\n",
       "\n",
-      "Test set: Average loss: 2.0374, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.6380, Accuracy: 1010/3024 (33%)\n",
       "\n",
-      "Train Epoch: 2 [0/12096 (0%)]\tLoss: 2.035471\n",
-      "Train Epoch: 2 [6400/12096 (53%)]\tLoss: 2.028146\n",
+      "Train Epoch: 2 [0/12096 (0%)]\tLoss: 1.685816\n",
+      "Train Epoch: 2 [6400/12096 (53%)]\tLoss: 1.796291\n",
       "\n",
-      "Test set: Average loss: 2.0130, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.5973, Accuracy: 1184/3024 (39%)\n",
       "\n",
-      "Train Epoch: 3 [0/12096 (0%)]\tLoss: 2.010831\n",
-      "Train Epoch: 3 [6400/12096 (53%)]\tLoss: 2.002723\n",
+      "Train Epoch: 3 [0/12096 (0%)]\tLoss: 1.520651\n",
+      "Train Epoch: 3 [6400/12096 (53%)]\tLoss: 1.655024\n",
       "\n",
-      "Test set: Average loss: 1.9987, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.6054, Accuracy: 1092/3024 (36%)\n",
       "\n",
-      "Train Epoch: 4 [0/12096 (0%)]\tLoss: 2.000082\n",
-      "Train Epoch: 4 [6400/12096 (53%)]\tLoss: 1.994325\n",
+      "Train Epoch: 4 [0/12096 (0%)]\tLoss: 1.659329\n",
+      "Train Epoch: 4 [6400/12096 (53%)]\tLoss: 1.612212\n",
       "\n",
-      "Test set: Average loss: 1.9894, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4800, Accuracy: 1321/3024 (44%)\n",
       "\n",
-      "Train Epoch: 5 [0/12096 (0%)]\tLoss: 1.988566\n",
-      "Train Epoch: 5 [6400/12096 (53%)]\tLoss: 1.983396\n",
+      "Train Epoch: 5 [0/12096 (0%)]\tLoss: 1.337501\n",
+      "Train Epoch: 5 [6400/12096 (53%)]\tLoss: 1.482215\n",
       "\n",
-      "Test set: Average loss: 1.9829, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4707, Accuracy: 1221/3024 (40%)\n",
       "\n",
-      "Train Epoch: 6 [0/12096 (0%)]\tLoss: 1.983022\n",
-      "Train Epoch: 6 [6400/12096 (53%)]\tLoss: 1.979089\n",
+      "Train Epoch: 6 [0/12096 (0%)]\tLoss: 1.297027\n",
+      "Train Epoch: 6 [6400/12096 (53%)]\tLoss: 1.432056\n",
       "\n",
-      "Test set: Average loss: 1.9781, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4358, Accuracy: 1305/3024 (43%)\n",
       "\n",
-      "Train Epoch: 7 [0/12096 (0%)]\tLoss: 1.978603\n",
-      "Train Epoch: 7 [6400/12096 (53%)]\tLoss: 1.975014\n",
+      "Train Epoch: 7 [0/12096 (0%)]\tLoss: 1.387481\n",
+      "Train Epoch: 7 [6400/12096 (53%)]\tLoss: 1.644332\n",
       "\n",
-      "Test set: Average loss: 1.9744, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4716, Accuracy: 1226/3024 (41%)\n",
       "\n",
-      "Train Epoch: 8 [0/12096 (0%)]\tLoss: 1.976831\n",
-      "Train Epoch: 8 [6400/12096 (53%)]\tLoss: 1.972262\n",
+      "Train Epoch: 8 [0/12096 (0%)]\tLoss: 1.585424\n",
+      "Train Epoch: 8 [6400/12096 (53%)]\tLoss: 1.487897\n",
       "\n",
-      "Test set: Average loss: 1.9715, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.3793, Accuracy: 1364/3024 (45%)\n",
       "\n",
-      "Train Epoch: 9 [0/12096 (0%)]\tLoss: 1.970821\n",
-      "Train Epoch: 9 [6400/12096 (53%)]\tLoss: 1.968406\n",
+      "Train Epoch: 9 [0/12096 (0%)]\tLoss: 1.360037\n",
+      "Train Epoch: 9 [6400/12096 (53%)]\tLoss: 1.450466\n",
       "\n",
-      "Test set: Average loss: 1.9692, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4166, Accuracy: 1317/3024 (44%)\n",
       "\n",
-      "Train Epoch: 10 [0/12096 (0%)]\tLoss: 1.970198\n",
-      "Train Epoch: 10 [6400/12096 (53%)]\tLoss: 1.963376\n",
+      "Train Epoch: 10 [0/12096 (0%)]\tLoss: 1.437289\n",
+      "Train Epoch: 10 [6400/12096 (53%)]\tLoss: 1.533453\n",
       "\n",
-      "Test set: Average loss: 1.9672, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.3571, Accuracy: 1391/3024 (46%)\n",
       "\n",
-      "Train Epoch: 11 [0/12096 (0%)]\tLoss: 1.966781\n",
-      "Train Epoch: 11 [6400/12096 (53%)]\tLoss: 1.966314\n",
+      "Train Epoch: 11 [0/12096 (0%)]\tLoss: 1.359832\n",
+      "Train Epoch: 11 [6400/12096 (53%)]\tLoss: 1.547809\n",
       "\n",
-      "Test set: Average loss: 1.9655, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.4214, Accuracy: 1297/3024 (43%)\n",
       "\n",
-      "Train Epoch: 12 [0/12096 (0%)]\tLoss: 1.966810\n",
-      "Train Epoch: 12 [6400/12096 (53%)]\tLoss: 1.964561\n",
+      "Train Epoch: 12 [0/12096 (0%)]\tLoss: 1.218457\n",
+      "Train Epoch: 12 [6400/12096 (53%)]\tLoss: 1.247929\n",
       "\n",
-      "Test set: Average loss: 1.9641, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.5716, Accuracy: 1210/3024 (40%)\n",
       "\n",
-      "Train Epoch: 13 [0/12096 (0%)]\tLoss: 1.961771\n",
-      "Train Epoch: 13 [6400/12096 (53%)]\tLoss: 1.961307\n",
+      "Train Epoch: 13 [0/12096 (0%)]\tLoss: 1.373579\n",
+      "Train Epoch: 13 [6400/12096 (53%)]\tLoss: 1.633059\n",
       "\n",
-      "Test set: Average loss: 1.9629, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.3697, Accuracy: 1365/3024 (45%)\n",
       "\n",
-      "Train Epoch: 14 [0/12096 (0%)]\tLoss: 1.962273\n",
-      "Train Epoch: 14 [6400/12096 (53%)]\tLoss: 1.960697\n",
+      "Train Epoch: 14 [0/12096 (0%)]\tLoss: 1.350925\n",
+      "Train Epoch: 14 [6400/12096 (53%)]\tLoss: 1.298991\n",
       "\n",
-      "Test set: Average loss: 1.9619, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.5748, Accuracy: 1064/3024 (35%)\n",
       "\n",
-      "Train Epoch: 15 [0/12096 (0%)]\tLoss: 1.956525\n",
-      "Train Epoch: 15 [6400/12096 (53%)]\tLoss: 1.960031\n",
+      "Train Epoch: 15 [0/12096 (0%)]\tLoss: 1.567266\n",
+      "Train Epoch: 15 [6400/12096 (53%)]\tLoss: 1.452183\n",
       "\n",
-      "Test set: Average loss: 1.9609, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.5579, Accuracy: 1169/3024 (39%)\n",
       "\n",
-      "Train Epoch: 16 [0/12096 (0%)]\tLoss: 1.958279\n",
-      "Train Epoch: 16 [6400/12096 (53%)]\tLoss: 1.957598\n",
+      "Train Epoch: 16 [0/12096 (0%)]\tLoss: 1.544419\n",
+      "Train Epoch: 16 [6400/12096 (53%)]\tLoss: 1.318753\n",
       "\n",
-      "Test set: Average loss: 1.9600, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.2986, Accuracy: 1485/3024 (49%)\n",
       "\n",
-      "Train Epoch: 17 [0/12096 (0%)]\tLoss: 1.961253\n",
-      "Train Epoch: 17 [6400/12096 (53%)]\tLoss: 1.957660\n",
+      "Train Epoch: 17 [0/12096 (0%)]\tLoss: 1.184075\n",
+      "Train Epoch: 17 [6400/12096 (53%)]\tLoss: 1.203249\n",
       "\n",
-      "Test set: Average loss: 1.9593, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.3218, Accuracy: 1420/3024 (47%)\n",
       "\n",
-      "Train Epoch: 18 [0/12096 (0%)]\tLoss: 1.956771\n",
-      "Train Epoch: 18 [6400/12096 (53%)]\tLoss: 1.954235\n",
+      "Train Epoch: 18 [0/12096 (0%)]\tLoss: 1.509200\n",
+      "Train Epoch: 18 [6400/12096 (53%)]\tLoss: 1.327282\n",
       "\n",
-      "Test set: Average loss: 1.9586, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.2245, Accuracy: 1604/3024 (53%)\n",
       "\n",
-      "Train Epoch: 19 [0/12096 (0%)]\tLoss: 1.957402\n",
-      "Train Epoch: 19 [6400/12096 (53%)]\tLoss: 1.958976\n",
+      "Train Epoch: 19 [0/12096 (0%)]\tLoss: 1.208773\n",
+      "Train Epoch: 19 [6400/12096 (53%)]\tLoss: 1.446857\n",
       "\n",
-      "Test set: Average loss: 1.9580, Accuracy: 400/3024 (13%)\n",
+      "Test set: Average loss: 1.3069, Accuracy: 1475/3024 (49%)\n",
       "\n"
      ]
     }
@@ -281,7 +281,7 @@
     "\n",
     "model = NN(input_size, n_hidden, output_size)\n",
     "model.to(device)\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.001)\n",
     "\n",
     "for epoch in range(1, 20):\n",
     "    train(model, device, train_loader, optimizer, epoch)\n",
